<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.AdminInterface"
    android:background="@color/homeBlack">

    <TextView
        android:id="@+id/BusInfoTop"
        android:layout_width="404dp"
        android:layout_height="280dp"
        android:layout_marginTop="-45dp"
        android:background="@drawable/home_rect1"
        android:gravity="center"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getUserData"
        android:layout_width="247dp"
        android:layout_height="63dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/login_rect"
        android:text="@string/get_user_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BusInfoTop" />

    <Button
        android:id="@+id/getBusRouteData"
        android:layout_width="247dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_rect"
        android:text="@string/get_bus_route_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserData" />

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="247dp"
        android:layout_height="63dp"
        android:background="@drawable/login_rect"
        android:text="@string/delete_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getBusRouteData"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>