<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/homeBlack">



    <View
        android:id="@+id/homeRect1"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-40dp"
        android:background="@drawable/logo3"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




    <EditText
        android:id="@+id/loginID"
        android:hint="@string/loginHint"
        android:gravity="center"
        android:layout_width="328dp"
        android:layout_height="64dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/login_rect"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRect1" />

    <EditText
        android:id="@+id/loginPassword"
        android:gravity="center"
        android:hint="@string/passwordHint"
        android:layout_width="328dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_rect"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginID" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginBottom="12dp"
        android:text="@string/loginID"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="125dp"
        android:layout_height="22dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginID"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="#3793FF"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="176dp"
        android:layout_height="46dp"
        android:background="#3793F9"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintVertical_bias="0.392" />


</androidx.constraintlayout.widget.ConstraintLayout>
